@@ -400,7 +400,7 @@ SpathiAllies (RESPONSE_REF R)
 			case 2:
 				NPCPhrase (GENERAL_INFO_3);
 				SET_GAME_STATE (KNOW_URQUAN_STORY, 1);
-				SET_GAME_STATE (KNOW_KOHR_AH_STORY, 1)
+				SET_GAME_STATE (KNOW_KOHR_AH_STORY, 1);
 				break;
 			case 3:
 				NPCPhrase (GENERAL_INFO_4);
