@@ -223,7 +223,7 @@ ExitConversation (RESPONSE_REF R)
 		SET_GAME_STATE (UMGAH_ZOMBIE_BLOBBIES, 0);
 		SET_GAME_STATE (UMGAH_VISITS, 0);
 		SET_GAME_STATE (UMGAH_HOME_VISITS, 0);
-		SET_GAME_STATE (ARILOU_STACK_2, 0)
+		SET_GAME_STATE (ARILOU_STACK_2, 0);
 	}
 }
 
